--- a/backend/package.json
+++ b/backend/package.json
@@ -18,16 +18,18 @@
     "@types/http-errors": "^1.6.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.4",
-    "aws-sdk": "^2.433.0",
+    "aws-sdk": "^2.1258.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless-aws-documentation": "^1.1.0",
+    "serverless-dynamodb-local": "^0.2.38",
     "serverless-iam-roles-per-function": "^3.2.0-e97ab49",
+    "serverless-offline": "^4.10.6",
     "serverless-plugin-canary-deployments": "^0.4.7",
     "serverless-plugin-tracing": "^2.0.0",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^9.4.1",
-    "typescript": ">=3.8.0",
+    "typescript": "^4.9.3",
     "webpack": "^5.75.0"
   },
   "author": "Ivan Mushketyk",
