--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,7 +1,7 @@
 # TODO: Change the name of the org 
-org: joelalexandrekhang
-app: serverless-todo-app
-service: serverless-todo-app
+# org: zulbil
+# app: serverless-todo-app
+service: todo-app
 
 plugins:
   - serverless-webpack
@@ -25,7 +25,7 @@ provider:
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    ATTACHMENT_S3_BUCKET: serverless-c4-todo-images-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: todo-app-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
   logs:
@@ -187,10 +187,6 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:provider.environment.ATTACHMENT_S3_BUCKET}
-        NotificationConfiguration:
-          TopicConfigurations:
-            - Event: s3:ObjectCreated:Put
-              Topic: !Ref ImagesTopic
         CorsConfiguration:
           CorsRules:
             -
@@ -220,4 +216,4 @@ resources:
               Principal: '*'
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.ATTACHMENT_S3_BUCKET}/*'
-        Bucket: '!Ref AttachmentsBucket'
+        Bucket: !Ref AttachmentsBucket
