--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless TODO image app",
   "dependencies": {
     "aws-xray-sdk": "^3.3.8",
-    "axios": "^0.18.1",
+    "axios": "^0.18.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "middy": "^0.36.0",
@@ -18,6 +18,8 @@
     "@types/http-errors": "^1.6.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^10.14.4",
+    "@types/source-map-support": "^0.5.6",
+    "@types/uuid": "^8.3.4",
     "aws-sdk": "^2.1258.0",
     "json-schema-to-ts": "^1.5.0",
     "serverless-aws-documentation": "^1.1.0",
